# terminal-theme-suite

./: .gitignore  LICENSE  README.md  pyproject.toml
.agents/skills/derive-theme-from-image/: SKILL.md
.agents/skills/derive-theme-from-image/agents/: openai.yaml
.agents/skills/derive-theme-from-image/references/: omp-herdr-role-matrix.md  semantic-theme-mapping.md  terminal-role-matrix.json
.agents/skills/derive-theme-from-image/scripts/: audit_terminal_theme.py  check_contrast.py  extract_palette.py  sample_wallpaper_contrast.py
.agents/skills/find-project-style-config/: SKILL.md
.agents/skills/find-project-style-config/agents/: openai.yaml
.agents/skills/find-project-style-config/references/: ecosystem-style-map.md
.agents/skills/find-project-style-config/scripts/: scan_style_sources.sh
.github/workflows/: ci.yml
artwork/wallpapers/: README.md
scripts/: install.sh  iterm_api_daemon.py  uninstall.sh
src/terminal_theme_suite/: __init__.py  cli.py  config.py  io.py  models.py  paths.py  service.py
src/terminal_theme_suite/adapters/: __init__.py  herdr.py  iterm2.py  omp.py
src/terminal_theme_suite/data/omp/: terminal-theme-suite.ts
src/terminal_theme_suite/data/presets/catppuccin/: preset.json
src/terminal_theme_suite/data/presets/dracula/: preset.json
src/terminal_theme_suite/data/schemas/: preset.schema.json
src/terminal_theme_suite/data/themes/: catppuccin.json  dracula.json  hero-amber.json  tokyo-night.json
tests/: test_config.py  test_integrations.py  test_iterm2.py  test_service.py
(+2 files in other folders)
